tests/baselines/reference/_caxnc-eqneqLRNindep-0001.errors.txt
tests/cases/conformance/_caxnc-eqneq/_caxnc-eqneqLRNindep-0001.ts(6,5): error TS2367: This condition will always return 'false' since the types 'number' and 'string' have no overlap.


==== tests/cases/conformance/_caxnc-eqneq/_caxnc-eqneqLRNindep-0001.ts (1 errors) ====
    let x: string | number = 1;
    let y: string | number = 1;
    x;
    y;
    // Expect: error TS2367: This condition will always return 'false' since the types 'number' and 'string' have no overlap.
    if (x===(y="one")){
        ~~~~~~~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types 'number' and 'string' have no overlap.
        x;y;
    }
    else {
        x;y;
    }